src/main/public/stylesheets/components/_task-list.scss
main {
  counter-reset: cmc-task-list-counter;

  .task-list-heading {
    &::before {
      content: counter(cmc-task-list-counter) '.';
      counter-increment: cmc-task-list-counter;
      padding-right: 30px;
    }
  }
}

.task-group {
  margin-bottom: 4rem;
}

.task-number {
  @include media (mobile) {
    margin-right: 0;
  }

  margin-right: 32px;
}

.task {
  border-bottom: 1px solid $grey-2;
  padding-bottom: 1rem;
  padding-top: 1rem;

  &:first-of-type {
    border-top: 1px solid $grey-2;
  }

  a {
    text-decoration: none;

    &:hover {
      text-decoration: underline;
    }
  }
}

.task-list-heading {
  @extend .heading-medium; // sass-lint:disable-line placeholder-in-extend heading-medium is simple, so its ok to extend
  margin-bottom: 0;
  margin-top: 0;
}

.task-name {
  @include media (mobile) {
    margin-left: 0;
  }

  margin-left: 70px;

  &.task-finished {
    @include media (mobile) {
      display: inline-block;
      max-width: 59%;
    }
  }
}

div {
  &.task-finished {
    background-color: $link-colour;
    float: right;

    strong {
      @include media (mobile) {
        font-size: 14px;
      }

      color: $white;
      display: inline-block;
      font-size: 16px;
      font-weight: 700;
      letter-spacing: 1px;
      line-height: 1.25;
      padding: 3px 6px 0;
    }
  }

  .unfinished {
    background-color: $grey-2;
  }

  .due-or-overdue {
    color: $error-colour;
    font-weight: bold;
  }
}


// Stop collapsing divs when empty
.if-empty {
  min-height: 1rem;
}

